build/sql.output
Nonterminals useless in grammar

    insert_statement
    insert_columns_clause
    insert_values_list
    update_statement
    update_list
    update_item
    delete_statement
    create_statement
    column_definition_list
    column_definition
    data_type
    column_constraint_list_opt
    column_constraint_list
    column_constraint
    default_value


Terminals unused in grammar

    CREATE
    TABLE
    INSERT
    INTO
    VALUES
    UPDATE
    SET
    DELETE
    INT
    CHAR
    VARCHAR
    NUMBER
    DATE
    TEXT
    PRIMARY
    KEY
    UNIQUE
    DEFAULT
    REFERENCES


Rules useless in grammar

   91 insert_statement: INSERT INTO table_name insert_columns_clause VALUES '(' insert_values_list ')'

   92 insert_columns_clause: ε
   93                      | '(' column_reference_list ')'

   94 insert_values_list: expression
   95                   | insert_values_list ',' expression

   96 update_statement: UPDATE table_name SET update_list where_clause_opt

   97 update_list: update_item
   98            | update_list ',' update_item

   99 update_item: column_reference '=' expression

  100 delete_statement: DELETE FROM table_name where_clause_opt

  101 create_statement: CREATE TABLE table_name '(' column_definition_list ')'

  102 column_definition_list: column_definition
  103                       | column_definition_list ',' column_definition

  104 column_definition: IDENTIFIER data_type column_constraint_list_opt

  105 data_type: INT
  106          | CHAR '(' INTEGER_LITERAL ')'
  107          | VARCHAR '(' INTEGER_LITERAL ')'
  108          | NUMBER
  109          | DATE
  110          | TEXT

  111 column_constraint_list_opt: ε
  112                           | column_constraint_list

  113 column_constraint_list: column_constraint
  114                       | column_constraint_list column_constraint

  115 column_constraint: NOT SQLNULL
  116                  | SQLNULL
  117                  | PRIMARY KEY
  118                  | UNIQUE
  119                  | DEFAULT default_value
  120                  | REFERENCES table_name

  121 default_value: INTEGER_LITERAL
  122              | FLOAT_LITERAL
  123              | STRING_LITERAL
  124              | SQLNULL


Rules useless in parser due to conflicts

    4 statement: ε

   71 exists_predicate: NOT EXISTS '(' select_statement ')'


State 1 conflicts: 2 shift/reduce
State 23 conflicts: 4 shift/reduce
State 44 conflicts: 4 shift/reduce
State 45 conflicts: 4 shift/reduce
State 46 conflicts: 4 shift/reduce
State 47 conflicts: 4 shift/reduce
State 143 conflicts: 15 reduce/reduce


Grammar

    0 $accept: input_statement $end

    1 input_statement: ε
    2                | input_statement statement

    3 statement: select_statement ';'
    4          | ε

    5 select_statement: SELECT select_list FROM table_reference_list where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt

    6 select_list: '*'
    7            | select_item_list

    8 select_item_list: select_item
    9                 | select_item_list ',' select_item

   10 select_item: expression
   11            | expression AS IDENTIFIER
   12            | expression IDENTIFIER

   13 table_reference_list: table_reference
   14                     | table_reference_list ',' table_reference

   15 table_reference: table_name
   16                | table_name IDENTIFIER
   17                | table_name AS IDENTIFIER
   18                | table_reference join_type JOIN table_reference ON search_condition

   19 table_name: IDENTIFIER

   20 join_type: ε
   21          | INNER
   22          | LEFT
   23          | RIGHT
   24          | FULL
   25          | LEFT OUTER
   26          | RIGHT OUTER
   27          | FULL OUTER

   28 where_clause_opt: ε
   29                 | WHERE search_condition

   30 group_by_clause_opt: ε
   31                    | GROUP BY column_reference_list

   32 column_reference_list: column_reference
   33                      | column_reference_list ',' column_reference

   34 column_reference: IDENTIFIER
   35                 | table_name '.' IDENTIFIER

   36 having_clause_opt: ε
   37                  | HAVING search_condition

   38 order_by_clause_opt: ε
   39                    | ORDER BY order_by_list

   40 order_by_list: order_by_item
   41              | order_by_list ',' order_by_item

   42 order_by_item: expression
   43              | expression ASC
   44              | expression DESC

   45 search_condition: search_condition OR search_condition
   46                 | search_condition AND search_condition
   47                 | NOT search_condition
   48                 | '(' search_condition ')'
   49                 | predicate

   50 predicate: comparison_predicate
   51          | between_predicate
   52          | in_predicate
   53          | like_predicate
   54          | null_predicate
   55          | exists_predicate

   56 comparison_predicate: expression '=' expression
   57                     | expression '<' expression
   58                     | expression '>' expression
   59                     | expression LE expression
   60                     | expression GE expression
   61                     | expression NE expression

   62 between_predicate: expression BETWEEN expression AND expression
   63                  | expression NOT BETWEEN expression AND expression

   64 in_predicate: expression IN '(' expression_list ')'
   65             | expression NOT IN '(' expression_list ')'

   66 like_predicate: expression LIKE expression
   67               | expression NOT LIKE expression

   68 null_predicate: expression IS SQLNULL
   69               | expression IS NOT SQLNULL

   70 exists_predicate: EXISTS '(' select_statement ')'
   71                 | NOT EXISTS '(' select_statement ')'

   72 expression_list: expression
   73                | expression_list ',' expression

   74 expression: term
   75           | expression '+' expression
   76           | expression '-' expression
   77           | expression '*' expression
   78           | expression '/' expression
   79           | '-' expression
   80           | '(' expression ')'
   81           | function_call

   82 term: IDENTIFIER
   83     | table_name '.' IDENTIFIER
   84     | INTEGER_LITERAL
   85     | FLOAT_LITERAL
   86     | STRING_LITERAL

   87 function_call: IDENTIFIER '(' ')'
   88              | IDENTIFIER '(' function_arg_list ')'

   89 function_arg_list: expression
   90                  | function_arg_list ',' expression


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 48 64 65 70 71 80 87 88
    ')' (41) 48 64 65 70 71 80 87 88
    '*' (42) 6 77
    '+' (43) 75
    ',' (44) 9 14 33 41 73 90
    '-' (45) 76 79
    '.' (46) 35 83
    '/' (47) 78
    ';' (59) 3
    '<' (60) 57
    '=' (61) 56
    '>' (62) 58
    error (256)
    SELECT (258) 5
    FROM (259) 5
    WHERE (260) 29
    GROUP (261) 31
    BY (262) 31 39
    HAVING (263) 37
    ORDER (264) 39
    ASC (265) 43
    DESC (266) 44
    JOIN (267) 18
    INNER (268) 21
    OUTER (269) 25 26 27
    LEFT (270) 22 25
    RIGHT (271) 23 26
    FULL (272) 24 27
    ON (273) 18
    AS (274) 11 17
    AND (275) 46 62 63
    OR (276) 45
    NOT (277) 47 63 65 67 69 71
    SQLNULL (278) 68 69
    IS (279) 68 69
    IN (280) 64 65
    LIKE (281) 66 67
    BETWEEN (282) 62 63
    CREATE (283)
    TABLE (284)
    INSERT (285)
    INTO (286)
    VALUES (287)
    UPDATE (288)
    SET (289)
    DELETE (290)
    INT (291)
    CHAR (292)
    VARCHAR (293)
    NUMBER (294)
    DATE (295)
    TEXT (296)
    PRIMARY (297)
    KEY (298)
    UNIQUE (299)
    DEFAULT (300)
    REFERENCES (301)
    EXISTS (302) 70 71
    LE (303) 59
    GE (304) 60
    NE (305) 61
    IDENTIFIER <str_val> (306) 11 12 16 17 19 34 35 82 83 87 88
    STRING_LITERAL <str_val> (307) 86
    INTEGER_LITERAL <int_val> (308) 84
    FLOAT_LITERAL <float_val> (309) 85
    UMINUS (310)


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    input_statement (69)
        on left: 1 2
        on right: 0 2
    statement (70)
        on left: 3 4
        on right: 2
    select_statement (71)
        on left: 5
        on right: 3 70 71
    select_list (72)
        on left: 6 7
        on right: 5
    select_item_list (73)
        on left: 8 9
        on right: 7 9
    select_item (74)
        on left: 10 11 12
        on right: 8 9
    table_reference_list (75)
        on left: 13 14
        on right: 5 14
    table_reference (76)
        on left: 15 16 17 18
        on right: 13 14 18
    table_name (77)
        on left: 19
        on right: 15 16 17 35 83
    join_type (78)
        on left: 20 21 22 23 24 25 26 27
        on right: 18
    where_clause_opt (79)
        on left: 28 29
        on right: 5
    group_by_clause_opt (80)
        on left: 30 31
        on right: 5
    column_reference_list (81)
        on left: 32 33
        on right: 31 33
    column_reference (82)
        on left: 34 35
        on right: 32 33
    having_clause_opt (83)
        on left: 36 37
        on right: 5
    order_by_clause_opt (84)
        on left: 38 39
        on right: 5
    order_by_list (85)
        on left: 40 41
        on right: 39 41
    order_by_item (86)
        on left: 42 43 44
        on right: 40 41
    search_condition (87)
        on left: 45 46 47 48 49
        on right: 18 29 37 45 46 47 48
    predicate (88)
        on left: 50 51 52 53 54 55
        on right: 49
    comparison_predicate (89)
        on left: 56 57 58 59 60 61
        on right: 50
    between_predicate (90)
        on left: 62 63
        on right: 51
    in_predicate (91)
        on left: 64 65
        on right: 52
    like_predicate (92)
        on left: 66 67
        on right: 53
    null_predicate (93)
        on left: 68 69
        on right: 54
    exists_predicate (94)
        on left: 70 71
        on right: 55
    expression_list (95)
        on left: 72 73
        on right: 64 65 73
    expression (96)
        on left: 74 75 76 77 78 79 80 81
        on right: 10 11 12 42 43 44 56 57 58 59 60 61 62 63 64 65 66 67 68 69 72 73 75 76 77 78 79 80 89 90
    term (97)
        on left: 82 83 84 85 86
        on right: 74
    function_call (98)
        on left: 87 88
        on right: 81
    function_arg_list (99)
        on left: 89 90
        on right: 88 90


State 0

    0 $accept: • input_statement $end

    $default  reduce using rule 1 (input_statement)

    input_statement  go to state 1


State 1

    0 $accept: input_statement • $end
    2 input_statement: input_statement • statement

    $end    shift, and go to state 2
    SELECT  shift, and go to state 3

    $end    [reduce using rule 4 (statement)]
    SELECT  [reduce using rule 4 (statement)]

    statement         go to state 4
    select_statement  go to state 5


State 2

    0 $accept: input_statement $end •

    $default  accept


State 3

    5 select_statement: SELECT • select_list FROM table_reference_list where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt

    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '*'              shift, and go to state 10
    '('              shift, and go to state 11
    '-'              shift, and go to state 12

    select_list       go to state 13
    select_item_list  go to state 14
    select_item       go to state 15
    table_name        go to state 16
    expression        go to state 17
    term              go to state 18
    function_call     go to state 19


State 4

    2 input_statement: input_statement statement •

    $default  reduce using rule 2 (input_statement)


State 5

    3 statement: select_statement • ';'

    ';'  shift, and go to state 20


State 6

   19 table_name: IDENTIFIER •
   82 term: IDENTIFIER •
   87 function_call: IDENTIFIER • '(' ')'
   88              | IDENTIFIER • '(' function_arg_list ')'

    '('  shift, and go to state 21

    '.'       reduce using rule 19 (table_name)
    $default  reduce using rule 82 (term)


State 7

   86 term: STRING_LITERAL •

    $default  reduce using rule 86 (term)


State 8

   84 term: INTEGER_LITERAL •

    $default  reduce using rule 84 (term)


State 9

   85 term: FLOAT_LITERAL •

    $default  reduce using rule 85 (term)


State 10

    6 select_list: '*' •

    $default  reduce using rule 6 (select_list)


State 11

   80 expression: '(' • expression ')'

    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 11
    '-'              shift, and go to state 12

    table_name     go to state 16
    expression     go to state 22
    term           go to state 18
    function_call  go to state 19


State 12

   79 expression: '-' • expression

    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 11
    '-'              shift, and go to state 12

    table_name     go to state 16
    expression     go to state 23
    term           go to state 18
    function_call  go to state 19


State 13

    5 select_statement: SELECT select_list • FROM table_reference_list where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt

    FROM  shift, and go to state 24


State 14

    7 select_list: select_item_list •
    9 select_item_list: select_item_list • ',' select_item

    ','  shift, and go to state 25

    $default  reduce using rule 7 (select_list)


State 15

    8 select_item_list: select_item •

    $default  reduce using rule 8 (select_item_list)


State 16

   83 term: table_name • '.' IDENTIFIER

    '.'  shift, and go to state 26


State 17

   10 select_item: expression •
   11            | expression • AS IDENTIFIER
   12            | expression • IDENTIFIER
   75 expression: expression • '+' expression
   76           | expression • '-' expression
   77           | expression • '*' expression
   78           | expression • '/' expression

    AS          shift, and go to state 27
    IDENTIFIER  shift, and go to state 28
    '*'         shift, and go to state 29
    '+'         shift, and go to state 30
    '-'         shift, and go to state 31
    '/'         shift, and go to state 32

    $default  reduce using rule 10 (select_item)


State 18

   74 expression: term •

    $default  reduce using rule 74 (expression)


State 19

   81 expression: function_call •

    $default  reduce using rule 81 (expression)


State 20

    3 statement: select_statement ';' •

    $default  reduce using rule 3 (statement)


State 21

   87 function_call: IDENTIFIER '(' • ')'
   88              | IDENTIFIER '(' • function_arg_list ')'

    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 11
    ')'              shift, and go to state 33
    '-'              shift, and go to state 12

    table_name         go to state 16
    expression         go to state 34
    term               go to state 18
    function_call      go to state 19
    function_arg_list  go to state 35


State 22

   75 expression: expression • '+' expression
   76           | expression • '-' expression
   77           | expression • '*' expression
   78           | expression • '/' expression
   80           | '(' expression • ')'

    '*'  shift, and go to state 29
    ')'  shift, and go to state 36
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '/'  shift, and go to state 32


State 23

   75 expression: expression • '+' expression
   76           | expression • '-' expression
   77           | expression • '*' expression
   78           | expression • '/' expression
   79           | '-' expression •

    '*'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '/'  shift, and go to state 32

    '*'       [reduce using rule 79 (expression)]
    '+'       [reduce using rule 79 (expression)]
    '-'       [reduce using rule 79 (expression)]
    '/'       [reduce using rule 79 (expression)]
    $default  reduce using rule 79 (expression)


State 24

    5 select_statement: SELECT select_list FROM • table_reference_list where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt

    IDENTIFIER  shift, and go to state 37

    table_reference_list  go to state 38
    table_reference       go to state 39
    table_name            go to state 40


State 25

    9 select_item_list: select_item_list ',' • select_item

    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 11
    '-'              shift, and go to state 12

    select_item    go to state 41
    table_name     go to state 16
    expression     go to state 17
    term           go to state 18
    function_call  go to state 19


State 26

   83 term: table_name '.' • IDENTIFIER

    IDENTIFIER  shift, and go to state 42


State 27

   11 select_item: expression AS • IDENTIFIER

    IDENTIFIER  shift, and go to state 43


State 28

   12 select_item: expression IDENTIFIER •

    $default  reduce using rule 12 (select_item)


State 29

   77 expression: expression '*' • expression

    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 11
    '-'              shift, and go to state 12

    table_name     go to state 16
    expression     go to state 44
    term           go to state 18
    function_call  go to state 19


State 30

   75 expression: expression '+' • expression

    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 11
    '-'              shift, and go to state 12

    table_name     go to state 16
    expression     go to state 45
    term           go to state 18
    function_call  go to state 19


State 31

   76 expression: expression '-' • expression

    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 11
    '-'              shift, and go to state 12

    table_name     go to state 16
    expression     go to state 46
    term           go to state 18
    function_call  go to state 19


State 32

   78 expression: expression '/' • expression

    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 11
    '-'              shift, and go to state 12

    table_name     go to state 16
    expression     go to state 47
    term           go to state 18
    function_call  go to state 19


State 33

   87 function_call: IDENTIFIER '(' ')' •

    $default  reduce using rule 87 (function_call)


State 34

   75 expression: expression • '+' expression
   76           | expression • '-' expression
   77           | expression • '*' expression
   78           | expression • '/' expression
   89 function_arg_list: expression •

    '*'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 89 (function_arg_list)


State 35

   88 function_call: IDENTIFIER '(' function_arg_list • ')'
   90 function_arg_list: function_arg_list • ',' expression

    ','  shift, and go to state 48
    ')'  shift, and go to state 49


State 36

   80 expression: '(' expression ')' •

    $default  reduce using rule 80 (expression)


State 37

   19 table_name: IDENTIFIER •

    $default  reduce using rule 19 (table_name)


State 38

    5 select_statement: SELECT select_list FROM table_reference_list • where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt
   14 table_reference_list: table_reference_list • ',' table_reference

    WHERE  shift, and go to state 50
    ','    shift, and go to state 51

    $default  reduce using rule 28 (where_clause_opt)

    where_clause_opt  go to state 52


State 39

   13 table_reference_list: table_reference •
   18 table_reference: table_reference • join_type JOIN table_reference ON search_condition

    INNER  shift, and go to state 53
    LEFT   shift, and go to state 54
    RIGHT  shift, and go to state 55
    FULL   shift, and go to state 56

    JOIN      reduce using rule 20 (join_type)
    $default  reduce using rule 13 (table_reference_list)

    join_type  go to state 57


State 40

   15 table_reference: table_name •
   16                | table_name • IDENTIFIER
   17                | table_name • AS IDENTIFIER

    AS          shift, and go to state 58
    IDENTIFIER  shift, and go to state 59

    $default  reduce using rule 15 (table_reference)


State 41

    9 select_item_list: select_item_list ',' select_item •

    $default  reduce using rule 9 (select_item_list)


State 42

   83 term: table_name '.' IDENTIFIER •

    $default  reduce using rule 83 (term)


State 43

   11 select_item: expression AS IDENTIFIER •

    $default  reduce using rule 11 (select_item)


State 44

   75 expression: expression • '+' expression
   76           | expression • '-' expression
   77           | expression • '*' expression
   77           | expression '*' expression •
   78           | expression • '/' expression

    '*'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '/'  shift, and go to state 32

    '*'       [reduce using rule 77 (expression)]
    '+'       [reduce using rule 77 (expression)]
    '-'       [reduce using rule 77 (expression)]
    '/'       [reduce using rule 77 (expression)]
    $default  reduce using rule 77 (expression)


State 45

   75 expression: expression • '+' expression
   75           | expression '+' expression •
   76           | expression • '-' expression
   77           | expression • '*' expression
   78           | expression • '/' expression

    '*'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '/'  shift, and go to state 32

    '*'       [reduce using rule 75 (expression)]
    '+'       [reduce using rule 75 (expression)]
    '-'       [reduce using rule 75 (expression)]
    '/'       [reduce using rule 75 (expression)]
    $default  reduce using rule 75 (expression)


State 46

   75 expression: expression • '+' expression
   76           | expression • '-' expression
   76           | expression '-' expression •
   77           | expression • '*' expression
   78           | expression • '/' expression

    '*'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '/'  shift, and go to state 32

    '*'       [reduce using rule 76 (expression)]
    '+'       [reduce using rule 76 (expression)]
    '-'       [reduce using rule 76 (expression)]
    '/'       [reduce using rule 76 (expression)]
    $default  reduce using rule 76 (expression)


State 47

   75 expression: expression • '+' expression
   76           | expression • '-' expression
   77           | expression • '*' expression
   78           | expression • '/' expression
   78           | expression '/' expression •

    '*'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '/'  shift, and go to state 32

    '*'       [reduce using rule 78 (expression)]
    '+'       [reduce using rule 78 (expression)]
    '-'       [reduce using rule 78 (expression)]
    '/'       [reduce using rule 78 (expression)]
    $default  reduce using rule 78 (expression)


State 48

   90 function_arg_list: function_arg_list ',' • expression

    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 11
    '-'              shift, and go to state 12

    table_name     go to state 16
    expression     go to state 60
    term           go to state 18
    function_call  go to state 19


State 49

   88 function_call: IDENTIFIER '(' function_arg_list ')' •

    $default  reduce using rule 88 (function_call)


State 50

   29 where_clause_opt: WHERE • search_condition

    NOT              shift, and go to state 61
    EXISTS           shift, and go to state 62
    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 63
    '-'              shift, and go to state 12

    table_name            go to state 16
    search_condition      go to state 64
    predicate             go to state 65
    comparison_predicate  go to state 66
    between_predicate     go to state 67
    in_predicate          go to state 68
    like_predicate        go to state 69
    null_predicate        go to state 70
    exists_predicate      go to state 71
    expression            go to state 72
    term                  go to state 18
    function_call         go to state 19


State 51

   14 table_reference_list: table_reference_list ',' • table_reference

    IDENTIFIER  shift, and go to state 37

    table_reference  go to state 73
    table_name       go to state 40


State 52

    5 select_statement: SELECT select_list FROM table_reference_list where_clause_opt • group_by_clause_opt having_clause_opt order_by_clause_opt

    GROUP  shift, and go to state 74

    $default  reduce using rule 30 (group_by_clause_opt)

    group_by_clause_opt  go to state 75


State 53

   21 join_type: INNER •

    $default  reduce using rule 21 (join_type)


State 54

   22 join_type: LEFT •
   25          | LEFT • OUTER

    OUTER  shift, and go to state 76

    $default  reduce using rule 22 (join_type)


State 55

   23 join_type: RIGHT •
   26          | RIGHT • OUTER

    OUTER  shift, and go to state 77

    $default  reduce using rule 23 (join_type)


State 56

   24 join_type: FULL •
   27          | FULL • OUTER

    OUTER  shift, and go to state 78

    $default  reduce using rule 24 (join_type)


State 57

   18 table_reference: table_reference join_type • JOIN table_reference ON search_condition

    JOIN  shift, and go to state 79


State 58

   17 table_reference: table_name AS • IDENTIFIER

    IDENTIFIER  shift, and go to state 80


State 59

   16 table_reference: table_name IDENTIFIER •

    $default  reduce using rule 16 (table_reference)


State 60

   75 expression: expression • '+' expression
   76           | expression • '-' expression
   77           | expression • '*' expression
   78           | expression • '/' expression
   90 function_arg_list: function_arg_list ',' expression •

    '*'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 90 (function_arg_list)


State 61

   47 search_condition: NOT • search_condition
   71 exists_predicate: NOT • EXISTS '(' select_statement ')'

    NOT              shift, and go to state 61
    EXISTS           shift, and go to state 81
    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 63
    '-'              shift, and go to state 12

    table_name            go to state 16
    search_condition      go to state 82
    predicate             go to state 65
    comparison_predicate  go to state 66
    between_predicate     go to state 67
    in_predicate          go to state 68
    like_predicate        go to state 69
    null_predicate        go to state 70
    exists_predicate      go to state 71
    expression            go to state 72
    term                  go to state 18
    function_call         go to state 19


State 62

   70 exists_predicate: EXISTS • '(' select_statement ')'

    '('  shift, and go to state 83


State 63

   48 search_condition: '(' • search_condition ')'
   80 expression: '(' • expression ')'

    NOT              shift, and go to state 61
    EXISTS           shift, and go to state 62
    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 63
    '-'              shift, and go to state 12

    table_name            go to state 16
    search_condition      go to state 84
    predicate             go to state 65
    comparison_predicate  go to state 66
    between_predicate     go to state 67
    in_predicate          go to state 68
    like_predicate        go to state 69
    null_predicate        go to state 70
    exists_predicate      go to state 71
    expression            go to state 85
    term                  go to state 18
    function_call         go to state 19


State 64

   29 where_clause_opt: WHERE search_condition •
   45 search_condition: search_condition • OR search_condition
   46                 | search_condition • AND search_condition

    AND  shift, and go to state 86
    OR   shift, and go to state 87

    $default  reduce using rule 29 (where_clause_opt)


State 65

   49 search_condition: predicate •

    $default  reduce using rule 49 (search_condition)


State 66

   50 predicate: comparison_predicate •

    $default  reduce using rule 50 (predicate)


State 67

   51 predicate: between_predicate •

    $default  reduce using rule 51 (predicate)


State 68

   52 predicate: in_predicate •

    $default  reduce using rule 52 (predicate)


State 69

   53 predicate: like_predicate •

    $default  reduce using rule 53 (predicate)


State 70

   54 predicate: null_predicate •

    $default  reduce using rule 54 (predicate)


State 71

   55 predicate: exists_predicate •

    $default  reduce using rule 55 (predicate)


State 72

   56 comparison_predicate: expression • '=' expression
   57                     | expression • '<' expression
   58                     | expression • '>' expression
   59                     | expression • LE expression
   60                     | expression • GE expression
   61                     | expression • NE expression
   62 between_predicate: expression • BETWEEN expression AND expression
   63                  | expression • NOT BETWEEN expression AND expression
   64 in_predicate: expression • IN '(' expression_list ')'
   65             | expression • NOT IN '(' expression_list ')'
   66 like_predicate: expression • LIKE expression
   67               | expression • NOT LIKE expression
   68 null_predicate: expression • IS SQLNULL
   69               | expression • IS NOT SQLNULL
   75 expression: expression • '+' expression
   76           | expression • '-' expression
   77           | expression • '*' expression
   78           | expression • '/' expression

    NOT      shift, and go to state 88
    IS       shift, and go to state 89
    IN       shift, and go to state 90
    LIKE     shift, and go to state 91
    BETWEEN  shift, and go to state 92
    LE       shift, and go to state 93
    GE       shift, and go to state 94
    NE       shift, and go to state 95
    '='      shift, and go to state 96
    '<'      shift, and go to state 97
    '>'      shift, and go to state 98
    '*'      shift, and go to state 29
    '+'      shift, and go to state 30
    '-'      shift, and go to state 31
    '/'      shift, and go to state 32


State 73

   14 table_reference_list: table_reference_list ',' table_reference •
   18 table_reference: table_reference • join_type JOIN table_reference ON search_condition

    INNER  shift, and go to state 53
    LEFT   shift, and go to state 54
    RIGHT  shift, and go to state 55
    FULL   shift, and go to state 56

    JOIN      reduce using rule 20 (join_type)
    $default  reduce using rule 14 (table_reference_list)

    join_type  go to state 57


State 74

   31 group_by_clause_opt: GROUP • BY column_reference_list

    BY  shift, and go to state 99


State 75

    5 select_statement: SELECT select_list FROM table_reference_list where_clause_opt group_by_clause_opt • having_clause_opt order_by_clause_opt

    HAVING  shift, and go to state 100

    $default  reduce using rule 36 (having_clause_opt)

    having_clause_opt  go to state 101


State 76

   25 join_type: LEFT OUTER •

    $default  reduce using rule 25 (join_type)


State 77

   26 join_type: RIGHT OUTER •

    $default  reduce using rule 26 (join_type)


State 78

   27 join_type: FULL OUTER •

    $default  reduce using rule 27 (join_type)


State 79

   18 table_reference: table_reference join_type JOIN • table_reference ON search_condition

    IDENTIFIER  shift, and go to state 37

    table_reference  go to state 102
    table_name       go to state 40


State 80

   17 table_reference: table_name AS IDENTIFIER •

    $default  reduce using rule 17 (table_reference)


State 81

   70 exists_predicate: EXISTS • '(' select_statement ')'
   71                 | NOT EXISTS • '(' select_statement ')'

    '('  shift, and go to state 103


State 82

   45 search_condition: search_condition • OR search_condition
   46                 | search_condition • AND search_condition
   47                 | NOT search_condition •

    $default  reduce using rule 47 (search_condition)


State 83

   70 exists_predicate: EXISTS '(' • select_statement ')'

    SELECT  shift, and go to state 3

    select_statement  go to state 104


State 84

   45 search_condition: search_condition • OR search_condition
   46                 | search_condition • AND search_condition
   48                 | '(' search_condition • ')'

    AND  shift, and go to state 86
    OR   shift, and go to state 87
    ')'  shift, and go to state 105


State 85

   56 comparison_predicate: expression • '=' expression
   57                     | expression • '<' expression
   58                     | expression • '>' expression
   59                     | expression • LE expression
   60                     | expression • GE expression
   61                     | expression • NE expression
   62 between_predicate: expression • BETWEEN expression AND expression
   63                  | expression • NOT BETWEEN expression AND expression
   64 in_predicate: expression • IN '(' expression_list ')'
   65             | expression • NOT IN '(' expression_list ')'
   66 like_predicate: expression • LIKE expression
   67               | expression • NOT LIKE expression
   68 null_predicate: expression • IS SQLNULL
   69               | expression • IS NOT SQLNULL
   75 expression: expression • '+' expression
   76           | expression • '-' expression
   77           | expression • '*' expression
   78           | expression • '/' expression
   80           | '(' expression • ')'

    NOT      shift, and go to state 88
    IS       shift, and go to state 89
    IN       shift, and go to state 90
    LIKE     shift, and go to state 91
    BETWEEN  shift, and go to state 92
    LE       shift, and go to state 93
    GE       shift, and go to state 94
    NE       shift, and go to state 95
    '='      shift, and go to state 96
    '<'      shift, and go to state 97
    '>'      shift, and go to state 98
    '*'      shift, and go to state 29
    ')'      shift, and go to state 36
    '+'      shift, and go to state 30
    '-'      shift, and go to state 31
    '/'      shift, and go to state 32


State 86

   46 search_condition: search_condition AND • search_condition

    NOT              shift, and go to state 61
    EXISTS           shift, and go to state 62
    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 63
    '-'              shift, and go to state 12

    table_name            go to state 16
    search_condition      go to state 106
    predicate             go to state 65
    comparison_predicate  go to state 66
    between_predicate     go to state 67
    in_predicate          go to state 68
    like_predicate        go to state 69
    null_predicate        go to state 70
    exists_predicate      go to state 71
    expression            go to state 72
    term                  go to state 18
    function_call         go to state 19


State 87

   45 search_condition: search_condition OR • search_condition

    NOT              shift, and go to state 61
    EXISTS           shift, and go to state 62
    IDENTIFIER       shift, and go to state 6
    STRING_LITERAL   shift, and go to state 7
    INTEGER_LITERAL  shift, and go to state 8
    FLOAT_LITERAL    shift, and go to state 9
    '('              shift, and go to state 63
    '-'              shift, and go to state 12

    table_name            go to state 16
    search_condition      go to state 107
    predicate             go to state 65
    comparison_predicate  go to state 66
    between_predicate     go to state 67
    in_predicate          go to state 68
    like_predicate        go to state 69
    null_predicate        go to state 70
    exists_predicate      go to state 71
    expression            go to state 72
    term                  go to state 18
    function_call         go to state 19


State 88

   63 between_predicate: expression NOT • BETWEEN expression AND expression
   65 in_predicate: expression NOT • IN '(' expression_list ')'
   67 like_predicate: expression NOT • LIKE expression

    IN       shift, and go to state 108
    LIKE     shift, and go to state 109
    BETWEEN  shift, and go to state 110


State 89
